--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <!-- <app-header></app-header>
 <app-main-body></app-main-body>
 <app-footer></app-footer> -->
-<app-data-binding></app-data-binding>
+<!-- <app-data-binding></app-data-binding> -->
+<!-- <app-event-binding></app-event-binding> -->
+<!-- <app-two-way-binding></app-two-way-binding> -->
+<!-- <app-structural-directives></app-structural-directives> -->
+<app-pipes></app-pipes>
