--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,7 @@
 <!-- <app-event-binding></app-event-binding> -->
 <!-- <app-two-way-binding></app-two-way-binding> -->
 <!-- <app-structural-directives></app-structural-directives> -->
-<app-pipes></app-pipes>
+<!-- <app-pipes></app-pipes> -->
+<!-- <app-parent></app-parent> -->
+<app-employee-list></app-employee-list>
+<app-employee-details></app-employee-details>
