--- a/src/app/event-binding/event-binding.component.html
+++ b/src/app/event-binding/event-binding.component.html
@@ -1,5 +1,5 @@
 <p>event-binding works!</p>
 <input type="button" value="greating" (click)="great()" />
 
-<input type="text" #txtValue>
+<input type="text" value="Rawda" #txtValue>
 <button (click)="logData(txtValue.value)">Log data</button>
