--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,17 @@
 <app-main-body></app-main-body>
 <app-footer></app-footer> -->
 <!-- <app-data-binding></app-data-binding> -->
-<!-- <app-event-binding></app-event-binding> -->
+<app-event-binding></app-event-binding>
 <!-- <app-two-way-binding></app-two-way-binding> -->
 <!-- <app-structural-directives></app-structural-directives> -->
 <!-- <app-pipes></app-pipes> -->
 <!-- <app-parent></app-parent> -->
-<app-employee-list></app-employee-list>
-<app-employee-details></app-employee-details>
+<!-- <app-employee-list></app-employee-list>
+<app-employee-details></app-employee-details> -->
+
+<!-- <nav>
+    <a routerLink="/employees">Employees</a>
+    <a routerLink="/departments">Departments</a>
+</nav>
+
+<router-outlet></router-outlet> -->
