--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <app-main-body></app-main-body>
 <app-footer></app-footer> -->
 <!-- <app-data-binding></app-data-binding> -->
-<app-event-binding></app-event-binding>
+<!-- <app-event-binding></app-event-binding> -->
 <!-- <app-two-way-binding></app-two-way-binding> -->
 <!-- <app-structural-directives></app-structural-directives> -->
 <!-- <app-pipes></app-pipes> -->
@@ -16,3 +16,4 @@
 </nav>
 
 <router-outlet></router-outlet> -->
+<app-tdf></app-tdf>
